Database Profiler outputs incorrect value of property "keysDeleted" for a remove operation when a write conflict occurs

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.3.0, 5.0.7, 5.2.2
    • Affects Version/s: 5.0 Desired
    • Component/s: None
    • Fully Compatible
    • ALL
    • v5.2, v5.0, v4.4, v4.2
    • Query 2020-11-30, Query 2020-12-14, Query 2020-12-28, Query 2021-01-11, Query 2021-01-25, Query Execution 2021-02-22, QE 2022-02-07, QE 2022-02-21, QE 2022-01-24
    • 15
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Database Profiler outputs incorrect value of property "keysDeleted" for a remove operation when a write conflict occurs. Other write operations and some other properties (like "keysInserted") are probably affected in the same way. Instead of setting "keysDeleted" value to the actual number of index keys deleted, the system accumulates the number of index keys deleted over all operation execution attempts, including retries, that happen in response to write conflicts.

      Here is one place where the property "keysDeleted" value is accumulated.

            Assignee:
            Romans Kasperovics
            Reporter:
            Mindaugas Malinauskas (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            13 Start watching this issue

              Created:
              Updated:
              Resolved: