SERVER-51456 Database Profiler outputs incorrect value of property "keysDeleted" for a remove operation when a write conflict occurs