src/mongo/db/catalog/collection_impl.cpp
@@ -954,6 +954,12 @@ Status CollectionImpl::_insertDocuments(OperationContext* opCtx,
 
     if (opDebug) {
         opDebug->additiveMetrics.incrementKeysInserted(keysInserted);
+        // 'opDebug' may be deleted at rollback time in case of multi-document transaction.
+        if (!opCtx->inMultiDocumentTransaction()) {
+            opCtx->recoveryUnit()->onRollback([opDebug, keysInserted]() {
+                opDebug->additiveMetrics.incrementKeysInserted(-keysInserted);
+            });
+        }
     }
 
     opCtx->getServiceContext()->getOpObserver()->onInserts(
@@ -1236,6 +1242,12 @@ void CollectionImpl::deleteDocument(OperationContext* opCtx,
 
     if (opDebug) {
         opDebug->additiveMetrics.incrementKeysDeleted(keysDeleted);
+        // 'opDebug' may be deleted at rollback time in case of multi-document transaction.
+        if (!opCtx->inMultiDocumentTransaction()) {
+            opCtx->recoveryUnit()->onRollback([opDebug, keysDeleted]() {
+                opDebug->additiveMetrics.incrementKeysDeleted(-keysDeleted);
+            });
+        }
     }
 }
 
@@ -1358,6 +1370,13 @@ RecordId CollectionImpl::updateDocument(OperationContext* opCtx,
         if (opDebug) {
             opDebug->additiveMetrics.incrementKeysInserted(keysInserted);
             opDebug->additiveMetrics.incrementKeysDeleted(keysDeleted);
+            // 'opDebug' may be deleted at rollback time in case of multi-document transaction.
+            if (!opCtx->inMultiDocumentTransaction()) {
+                opCtx->recoveryUnit()->onRollback([opDebug, keysInserted, keysDeleted]() {
+                    opDebug->additiveMetrics.incrementKeysInserted(-keysInserted);
+                    opDebug->additiveMetrics.incrementKeysDeleted(-keysDeleted);
+                });
+            }
         }
     }
 
